--- a/src/Login/login.fxml
+++ b/src/Login/login.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="Login.LoginController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.LoginController">
    <children>
-      <AnchorPane layoutX="200.0" layoutY="93.0" prefHeight="200.0" prefWidth="200.0" />
+      <Label layoutX="88.0" layoutY="93.0" text="username" />
+      <Label layoutX="88.0" layoutY="134.0" text="password" />
+      <TextField fx:id="username" layoutX="210.0" layoutY="89.0" promptText="username" />
+      <PasswordField fx:id="password" layoutX="210.0" layoutY="139.0" promptText="password" />
+      <Button fx:id="login" layoutX="232.0" layoutY="225.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Login" />
+      <Label fx:id="status" layoutX="74.0" layoutY="31.0" text="Status" />
+      <Label fx:id="connection" layoutX="241.0" layoutY="31.0" />
    </children>
 </AnchorPane>
