--- a/src/Login/Login.fxml
+++ b/src/Login/Login.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
@@ -7,19 +12,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.LoginController">
+<AnchorPane id="AnchorPane" prefHeight="310.0" prefWidth="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.LoginController">
    <children>
       <Label alignment="CENTER" prefHeight="52.0" prefWidth="320.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Library Login" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="username" labelFloat="true" layoutX="45.0" layoutY="81.0" maxWidth="289.0" minWidth="240.0" prefHeight="43.0" prefWidth="289.0" promptText="Username">
+      <JFXTextField fx:id="username" labelFloat="true" layoutX="23.0" layoutY="80.0" maxWidth="289.0" minWidth="240.0" prefHeight="43.0" prefWidth="289.0" promptText="Username">
          <font>
             <Font size="16.0" />
          </font>
       </JFXTextField>
-      <JFXPasswordField fx:id="password" labelFloat="true" layoutX="45.0" layoutY="136.0" maxWidth="289.0" minWidth="230.0" prefHeight="43.0" prefWidth="289.0" promptText="Password">
+      <JFXPasswordField fx:id="password" labelFloat="true" layoutX="23.0" layoutY="134.0" maxWidth="289.0" minWidth="230.0" prefHeight="43.0" prefWidth="289.0" promptText="Password">
          <font>
             <Font size="16.0" />
          </font>
@@ -29,7 +34,7 @@
             <Font size="16.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="CancelButton" layoutX="196.0" layoutY="200.0" onAction="#handleCancelBtnAction" prefHeight="52.0" prefWidth="97.0" style="-fx-background-color: blue;" text="Cancel">
+      <JFXButton fx:id="CancelButton" layoutX="168.0" layoutY="200.0" onAction="#handleCancelBtnAction" prefHeight="52.0" prefWidth="97.0" style="-fx-background-color: blue;" text="Cancel">
          <font>
             <Font size="16.0" />
          </font>
