--- a/src/Book/AddBook.fxml
+++ b/src/Book/AddBook.fxml
@@ -14,7 +14,7 @@
    <children>
       <VBox prefHeight="376.0" prefWidth="405.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <JFXTextField fx:id="tittle" labelFloat="true" promptText="Book Tittle">
+            <JFXTextField fx:id="title" labelFloat="true" promptText="Book Tittle">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="20.0" />
                </VBox.margin>
