--- a/src/Book/AddBook.fxml
+++ b/src/Book/AddBook.fxml
@@ -1,43 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="274.0" prefWidth="405.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Book.AddBookController">
+<AnchorPane id="AnchorPane" prefHeight="525.0" prefWidth="563.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Book.AddBookController">
     
    <children>
-      <VBox prefHeight="376.0" prefWidth="405.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="421.0" prefWidth="510.0" AnchorPane.bottomAnchor="-9.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <JFXTextField fx:id="title" labelFloat="true" promptText="Book Tittle">
+            <JFXTextField fx:id="title" focusColor="#414ba3" labelFloat="true" promptText="Book Tittle" style="-fx-background-color: white; -fx-text-fill: red;" unFocusColor="#4d4d4d">
                <VBox.margin>
-                  <Insets left="10.0" right="10.0" top="20.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
-            </JFXTextField>
-            <JFXTextField fx:id="id" labelFloat="true" layoutX="20.0" layoutY="30.0" promptText="Book ID">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </JFXTextField>
             <JFXTextField fx:id="author" labelFloat="true" layoutX="20.0" layoutY="30.0" promptText="Book Author">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </JFXTextField>
-            <JFXTextField fx:id="publisher" labelFloat="true" layoutX="10.0" layoutY="61.0" promptText="Publisher">
+            <JFXTextField fx:id="subjarea" labelFloat="true" promptText="Subject Area">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </JFXTextField>
-            <HBox prefHeight="63.0" prefWidth="407.0">
+            <JFXTextField fx:id="id" labelFloat="true" layoutX="20.0" layoutY="30.0" promptText="ISBN Number">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField fx:id="dateadded" labelFloat="true" layoutX="10.0" layoutY="61.0" promptText="Date Added">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField labelFloat="true" promptText="Number Of Copies">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXTextField>
+            <HBox prefHeight="76.0" prefWidth="528.0">
                <children>
-                  <JFXButton fx:id="save" onAction="#handleSaveBtnAction" prefHeight="67.0" prefWidth="250.0" text="Save" />
-                  <JFXButton fx:id="cancel" layoutX="10.0" layoutY="10.0" onAction="#handleCancelBtnAction" prefHeight="67.0" prefWidth="250.0" text="Cancel" />
+                  <JFXButton fx:id="cancel" layoutX="10.0" layoutY="10.0" onAction="#handleCancelBtnAction" prefHeight="72.0" prefWidth="282.0" ripplerFill="#415fa6" style="-fx-background-color: cyan;" text="Cancel">
+                     <font>
+                        <Font size="15.0" />
+                     </font></JFXButton>
+                  <JFXButton fx:id="save" buttonType="RAISED" onAction="#handleSaveBtnAction" prefHeight="72.0" prefWidth="282.0" ripplerFill="#415fa6" style="-fx-background-color: cyan;" text="Save">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </HBox>
          </children>
