--- a/src/Librarian/admin.fxml
+++ b/src/Librarian/admin.fxml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="679.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.AdminController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="679.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.AdminController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
@@ -36,11 +45,11 @@
          <right>
             <VBox prefHeight="455.0" prefWidth="148.0" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton fx:id="addmember" contentDisplay="TOP" onAction="#handleAddMemBtnAction" prefHeight="150.0" prefWidth="150.0" text="Add Member" />
-                  <JFXButton fx:id="addbook" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleAddBookBtnAction" prefHeight="150.0" prefWidth="150.0" text="Add Book" />
-                  <JFXButton fx:id="viewmembers" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleViewMemBtnAction" prefHeight="150.0" prefWidth="150.0" text="View Members" />
-                  <JFXButton fx:id="viewbooks" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleViewBooksBtnAction" prefHeight="150.0" prefWidth="150.0" text="View Books" />
-                  <JFXButton fx:id="settings" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleSettingsBtnAction" prefHeight="150.0" prefWidth="150.0" text="Settings" />
+                  <JFXButton fx:id="addmember" contentDisplay="TOP" onAction="#handleAddMemBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Member" />
+                  <JFXButton fx:id="addbook" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleAddBookBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Book" />
+                  <JFXButton fx:id="viewmembers" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleViewMemBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="View Members" />
+                  <JFXButton fx:id="viewbooks" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleViewBooksBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="View Books" />
+                  <JFXButton fx:id="settings" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleSettingsBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Settings" />
                </children>
                <effect>
                   <Blend />
