--- a/src/Librarian/admin.fxml
+++ b/src/Librarian/admin.fxml
@@ -47,23 +47,38 @@
                   <JFXButton fx:id="addmember" contentDisplay="TOP" onAction="#handleAddMemBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Member">
                      <VBox.margin>
                         <Insets top="10.0" />
-                     </VBox.margin></JFXButton>
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font></JFXButton>
                   <JFXButton fx:id="addbook" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleAddBookBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Book">
                      <VBox.margin>
                         <Insets top="10.0" />
-                     </VBox.margin></JFXButton>
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font></JFXButton>
                   <JFXButton fx:id="viewmembers" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleViewMemBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="View Members">
                      <VBox.margin>
                         <Insets top="10.0" />
-                     </VBox.margin></JFXButton>
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font></JFXButton>
                   <JFXButton fx:id="viewbooks" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleViewBooksBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Catalogue">
                      <VBox.margin>
                         <Insets top="10.0" />
-                     </VBox.margin></JFXButton>
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font></JFXButton>
                   <JFXButton fx:id="settings" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleSettingsBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Issuable Book">
                      <VBox.margin>
                         <Insets bottom="10.0" top="10.0" />
-                     </VBox.margin></JFXButton>
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font></JFXButton>
                </children>
                <effect>
                   <Blend />
@@ -76,9 +91,9 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <VBox layoutX="-21.0" layoutY="51.0" prefHeight="426.0" prefWidth="531.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <VBox prefHeight="426.0" prefWidth="531.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
-                                    <HBox alignment="CENTER" prefHeight="151.0" prefWidth="531.0">
+                                    <HBox alignment="CENTER" prefHeight="149.0" prefWidth="531.0">
                                        <children>
                                           <JFXTextField fx:id="enterbookid" labelFloat="true" maxWidth="141.0" minWidth="135.0" prefHeight="31.0" prefWidth="141.0" promptText="Enter Book ID">
                                              <HBox.margin>
@@ -102,11 +117,28 @@
                                                    <font>
                                                       <Font size="14.0" />
                                                    </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
                                                 </Label>
                                              </children>
                                           </VBox>
-                                       </children></HBox>
-                                    <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="151.0" prefWidth="531.0">
+                                       </children>
+                                       <padding>
+                                          <Insets top="40.0" />
+                                       </padding>
+                                       <VBox.margin>
+                                          <Insets top="50.0" />
+                                       </VBox.margin></HBox>
+                                    <Label prefHeight="37.0" prefWidth="531.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Member Information">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="134.0" prefWidth="531.0">
                                        <children>
                                           <JFXTextField fx:id="entermemberid" labelFloat="true" maxWidth="141.0" minWidth="141.0" prefHeight="31.0" prefWidth="141.0" promptText="Enter Member ID">
                                              <HBox.margin>
@@ -118,28 +150,39 @@
                                           </JFXTextField>
                                           <VBox alignment="CENTER" prefHeight="151.0" prefWidth="386.0">
                                              <HBox.margin>
-                                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                                <Insets bottom="20.0" left="20.0" right="20.0" top="50.0" />
                                              </HBox.margin>
                                              <children>
                                                 <Label fx:id="member_name" prefHeight="52.0" prefWidth="150.0" text="Member Name">
                                                    <font>
                                                       <Font size="14.0" />
                                                    </font>
+                                                   <VBox.margin>
+                                                      <Insets />
+                                                   </VBox.margin>
                                                 </Label>
                                                 <Label fx:id="contactnumber" prefHeight="53.0" prefWidth="149.0" text="Contact Number">
                                                    <font>
                                                       <Font size="14.0" />
                                                    </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
                                                 </Label>
                                              </children>
                                           </VBox>
                                        </children>
                                        <VBox.margin>
-                                          <Insets />
+                                          <Insets bottom="40.0" top="40.0" />
                                        </VBox.margin>
                                     </HBox>
                                  </children>
                               </VBox>
+                              <Label layoutY="10.0" prefHeight="13.0" prefWidth="531.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Book Information">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Label>
                            </children></AnchorPane>
                   </content>
                 </Tab>
