--- a/src/Librarian/ViewMembers.fxml
+++ b/src/Librarian/ViewMembers.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="530.0" prefWidth="1077.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.ViewMembersController">
+<AnchorPane id="AnchorPane" prefHeight="482.0" prefWidth="744.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.ViewMembersController">
    <children>
-      <TableView fx:id="viewmember" layoutX="-11.0" prefHeight="537.0" prefWidth="1064.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="viewmember" prefHeight="487.0" prefWidth="772.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
-          <TableColumn fx:id="firstnamecolumn" prefWidth="159.0" text="First Name" />
-          <TableColumn fx:id="lastnamecolumn" prefWidth="158.0" text="Last Name" />
-            <TableColumn fx:id="dateofbirthcolumn" minWidth="0.0" prefWidth="149.0" text="Date Of Birth" />
-            <TableColumn fx:id="dateofmembershipcolumn" prefWidth="160.0" text="Date Of Membership" />
-            <TableColumn fx:id="addresscolumn" prefWidth="119.0" text="Address" />
-            <TableColumn fx:id="contactnumbercolumn" prefWidth="112.0" text="Contact Number" />
-            <TableColumn fx:id="emailadresscolumn" prefWidth="125.0" text="Email Address" />
+          <TableColumn fx:id="firstnamecolumn" prefWidth="117.0" text="First Name" />
+          <TableColumn fx:id="lastnamecolumn" prefWidth="108.0" text="Last Name" />
+            <TableColumn fx:id="dateofbirthcolumn" prefWidth="110.0" text="Date Of Birth" />
+            <TableColumn fx:id="dateofmembershipcolumn" minWidth="0.0" prefWidth="140.0" text="Date Of Membership" />
+            <TableColumn fx:id="addresscolumn" minWidth="0.0" prefWidth="75.0" text="Address" />
+            <TableColumn fx:id="contactnumbercolumn" minWidth="0.0" prefWidth="109.0" text="Contact Number" />
+            <TableColumn fx:id="emailadresscolumn" minWidth="0.0" prefWidth="81.0" text="Email" />
         </columns>
       </TableView>
    </children>
