--- a/src/Librarian/admin.fxml
+++ b/src/Librarian/admin.fxml
@@ -98,7 +98,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <VBox prefHeight="426.0" prefWidth="531.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <VBox layoutX="14.0" layoutY="-32.0" prefHeight="426.0" prefWidth="531.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-14.0" AnchorPane.topAnchor="-32.0">
                                  <children>
                                     <HBox alignment="CENTER" prefHeight="149.0" prefWidth="531.0">
                                        <children>
@@ -137,6 +137,7 @@
                                        <VBox.margin>
                                           <Insets top="50.0" />
                                        </VBox.margin></HBox>
+                                    <JFXButton onAction="#searchbook" text="Search" />
                                     <Label prefHeight="37.0" prefWidth="531.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Member Information">
                                        <font>
                                           <Font size="16.0" />
@@ -145,7 +146,8 @@
                                           <Insets top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="134.0" prefWidth="531.0">
+                                    <JFXButton prefHeight="25.0" prefWidth="94.0" text="Search" />
+                                    <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="138.0" prefWidth="531.0">
                                        <children>
                                           <JFXTextField fx:id="entermemberid" labelFloat="true" maxWidth="141.0" minWidth="141.0" prefHeight="31.0" prefWidth="141.0" promptText="Enter Member ID">
                                              <HBox.margin>
