--- a/src/Book/issuablebook.fxml
+++ b/src/Book/issuablebook.fxml
@@ -4,15 +4,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="Book.IssuablebookController">
+<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Book.IssuablebookController">
    <children>
       <TableView fx:id="issuablebook" prefHeight="400.0" prefWidth="472.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
-          <TableColumn fx:id="booktitile" prefWidth="158.0" text="Book Title" />
-          <TableColumn fx:id="holdername" prefWidth="155.0" text="Holder Name" />
-            <TableColumn fx:id="noOftimesissued" prefWidth="151.0" text="Number Of Times Issued" />
-            <TableColumn fx:id="lasttimeissued" prefWidth="113.0" text="Last Time Issued" />
+          <TableColumn fx:id="booktitile" prefWidth="128.0" text="MemberName" />
+          <TableColumn fx:id="holdername" prefWidth="130.0" text="Member ID" />
+            <TableColumn fx:id="noOftimesissued" prefWidth="120.0" text="Book Title" />
+            <TableColumn fx:id="lasttimeissued" prefWidth="123.0" text="Book ID" />
+            <TableColumn fx:id="lasttimeissued1" prefWidth="116.0" text="Book Author" />
+            <TableColumn fx:id="booktitile1" prefWidth="122.0" text="Issue Date" />
         </columns>
       </TableView>
    </children>
